k8s/dendrite/templates/well-known.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dendrite-root
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`anshulg.com`) && PathPrefix(`/.well-known/matrix`)
      services:
        - name: dendrite
          port: 8008
          kind: Service
  tls:
    secretName: matrix-root-cert
    domains:
      - main: anshulg.com
